// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`composition hook should return with Alert props 1`] = `
Object {
  "aria-describedby": undefined,
  "aria-labelledby": undefined,
  "children": <Context.Provider
    value={
      Object {
        "descriptionId": "",
        "titleId": "",
        "type": "info",
      }
    }
  >
    <ForwardRef
      alignItems="center"
      display="flex"
      justifyContent="space-between"
    >
      <ForwardRef
        alignItems="center"
        display="flex"
      >
        <React.Fragment>
          <AlertContent>
            <AlertDescription />
          </AlertContent>
        </React.Fragment>
      </ForwardRef>
    </ForwardRef>
  </Context.Provider>,
  "className": "css-1b98qcd css-1pwrqjj css-3ekj6a fp-Box fp-Alert",
  "role": "alert",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

<div
  aria-describedby="alertDescription"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Alert"
  role="alert"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 test fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`defaultProps should render correctly for hasIcon 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-16 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-15 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-13 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-5 {
  line-height: 0.9;
  margin-right: 1rem;
}

.emotion-2 {
  color: #1e67d5 !important;
  font-size: 1.5em !important;
}

.emotion-0 {
  fill: #1e67d5;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  aria-describedby="alertDescription"
  class="emotion-16 emotion-1 emotion-4 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-1 emotion-15 fp-Box"
  >
    <div
      class="emotion-1 emotion-13 fp-Box"
    >
      <div
        class="emotion-1 emotion-4 emotion-5 fp-AlertIconWrapper fp-Box"
      >
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1 emotion-2 fp-Box fp-Icon"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="emotion-1 emotion-4 emotion-11 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-1 emotion-4 emotion-8 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`defaultProps should render correctly for isFilled 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-10 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
  background-color: #1e67d5;
  color: #fff;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`defaultProps should render correctly for isInline 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 > *:first-child {
  margin-right: 0.25rem;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`overrides Alert.CloseButton.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-20 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-19 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-17 {
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #1e67d5;
  border-radius: 4px;
  color: #fff;
  fill: #fff;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-12[disabled],
.emotion-12[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-12:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #1e67d5 0px 0px 0px 1px, #8eb3ea 0px 0px 0px 3px;
}

.emotion-12:hover {
  background-color: #1851a8;
}

.emotion-12:hover:active {
  background-color: #154792;
}

.emotion-12 {
  background-color: unset;
  border: unset;
  color: #1e67d5;
  fill: #1e67d5;
}

.emotion-12:hover {
  background-color: rgba(0,0,0,0.05);
}

.emotion-12:hover:active {
  background-color: rgba(0,0,0,0.1);
}

.emotion-11.emotion-11 {
  min-height: unset;
  padding: 0.5em;
}

.emotion-10 {
  font-size: 1.25em !important;
}

.emotion-8 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-15 {
  background-color: red;
}

<div
  aria-describedby="alertDescription"
  class="emotion-20 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-19 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          hello world
        </div>
      </div>
    </div>
    <div
      class="emotion-0 emotion-17 fp-Box"
    >
      <button
        aria-disabled="false"
        class="emotion-11 emotion-12 emotion-0 emotion-1 emotion-15 fp-AlertCloseButton fp-Box fp-Button fp-ButtonClose"
        tabindex="0"
        type="button"
      >
        <svg
          class="emotion-8 emotion-0 emotion-10 fp-Box fp-Icon"
          role="img"
          viewBox="0 0 320 512"
        >
          <path
            d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
        >
          Close
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`overrides Alert.Content.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-5 {
  background-color: red;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`overrides Alert.Description.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-2 {
  background-color: red;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`overrides Alert.IconWrapper.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-16 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-15 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-13 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-2 {
  color: #1e67d5 !important;
  font-size: 1.5em !important;
}

.emotion-0 {
  fill: #1e67d5;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-5 {
  line-height: 0.9;
  margin-right: 1rem;
}

.emotion-5 {
  background-color: red;
}

<div
  aria-describedby="alertDescription"
  class="emotion-16 emotion-1 emotion-4 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-1 emotion-15 fp-Box"
  >
    <div
      class="emotion-1 emotion-13 fp-Box"
    >
      <div
        class="emotion-1 emotion-4 emotion-5 fp-AlertIconWrapper fp-Box"
      >
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1 emotion-2 fp-Box fp-Icon"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="emotion-1 emotion-4 emotion-11 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-1 emotion-4 emotion-8 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`overrides Alert.Title.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-16 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-15 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-13 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-2 {
  font-weight: 600 !important;
}

abbr.emotion-0 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-0 {
  font-family: monospace;
}

i.emotion-0 {
  font-style: italic;
}

kbd.emotion-0 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-0 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-0 {
  font-weight: bold;
}

sub.emotion-0,
sup.emotion-0 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-0,
u.emotion-0 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-0,
cite.emotion-0,
var.emotion-0,
em.emotion-0 {
  font-style: italic;
}

kbd.emotion-0,
pre.emotion-0,
samp.emotion-0 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-5 {
  background-color: red;
}

<div
  aria-describedby="alertDescription"
  aria-labelledby="alertTitle"
  class="emotion-16 emotion-1 emotion-4 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-1 emotion-15 fp-Box"
  >
    <div
      class="emotion-1 emotion-13 fp-Box"
    >
      <div
        class="emotion-1 emotion-4 emotion-11 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-1 emotion-4 emotion-5 fp-AlertTitle fp-Box"
        >
          <span
            class="emotion-0 emotion-1 emotion-2 fp-Box fp-Text"
            id="alertTitle"
          >
            This is a title
          </span>
        </div>
        <div
          class="emotion-1 emotion-4 emotion-8 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`overrides Alert.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-10 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-10 {
  background-color: red;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for an icon (danger) 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-15 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-13 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-5 {
  line-height: 0.9;
  margin-right: 1rem;
}

.emotion-16 {
  background-color: #f8e9e8;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-2 {
  color: #bb2a1a !important;
  font-size: 1.5em !important;
}

.emotion-0 {
  fill: #bb2a1a;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  aria-describedby="alertDescription"
  class="emotion-16 emotion-1 emotion-4 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-1 emotion-15 fp-Box"
  >
    <div
      class="emotion-1 emotion-13 fp-Box"
    >
      <div
        class="emotion-1 emotion-4 emotion-5 fp-AlertIconWrapper fp-Box"
      >
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1 emotion-2 fp-Box fp-Icon"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="emotion-1 emotion-4 emotion-11 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-1 emotion-4 emotion-8 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for an icon (info) 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-16 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-15 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-13 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-5 {
  line-height: 0.9;
  margin-right: 1rem;
}

.emotion-2 {
  color: #1e67d5 !important;
  font-size: 1.5em !important;
}

.emotion-0 {
  fill: #1e67d5;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  aria-describedby="alertDescription"
  class="emotion-16 emotion-1 emotion-4 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-1 emotion-15 fp-Box"
  >
    <div
      class="emotion-1 emotion-13 fp-Box"
    >
      <div
        class="emotion-1 emotion-4 emotion-5 fp-AlertIconWrapper fp-Box"
      >
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1 emotion-2 fp-Box fp-Icon"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="emotion-1 emotion-4 emotion-11 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-1 emotion-4 emotion-8 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for an icon (success) 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-15 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-13 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-5 {
  line-height: 0.9;
  margin-right: 1rem;
}

.emotion-16 {
  background-color: #e7f0e8;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-2 {
  color: #107219 !important;
  font-size: 1.5em !important;
}

.emotion-0 {
  fill: #107219;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  aria-describedby="alertDescription"
  class="emotion-16 emotion-1 emotion-4 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-1 emotion-15 fp-Box"
  >
    <div
      class="emotion-1 emotion-13 fp-Box"
    >
      <div
        class="emotion-1 emotion-4 emotion-5 fp-AlertIconWrapper fp-Box"
      >
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1 emotion-2 fp-Box fp-Icon"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="emotion-1 emotion-4 emotion-11 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-1 emotion-4 emotion-8 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for an icon (warning) 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-15 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-13 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-5 {
  line-height: 0.9;
  margin-right: 1rem;
}

.emotion-16 {
  background-color: #fdf5e8;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-2 {
  color: #ed9c22 !important;
  font-size: 1.5em !important;
}

.emotion-0 {
  fill: #ed9c22;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  aria-describedby="alertDescription"
  class="emotion-16 emotion-1 emotion-4 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-1 emotion-15 fp-Box"
  >
    <div
      class="emotion-1 emotion-13 fp-Box"
    >
      <div
        class="emotion-1 emotion-4 emotion-5 fp-AlertIconWrapper fp-Box"
      >
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1 emotion-2 fp-Box fp-Icon"
          role="img"
          viewBox="0 0 576 512"
        >
          <path
            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="emotion-1 emotion-4 emotion-11 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-1 emotion-4 emotion-8 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for danger type 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-10 {
  background-color: #f8e9e8;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for info type 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for isFilled (danger) 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-10 {
  background-color: #f8e9e8;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
  background-color: #bb2a1a;
  color: #fff;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for isFilled (info) 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-10 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
  background-color: #1e67d5;
  color: #fff;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for isFilled (success) 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-10 {
  background-color: #e7f0e8;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
  background-color: #107219;
  color: #fff;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for isFilled (warning) 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-10 {
  background-color: #fdf5e8;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
  background-color: #ed9c22;
  color: #000;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for isInline (danger) 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 > *:first-child {
  margin-right: 0.25rem;
}

.emotion-10 {
  background-color: #f8e9e8;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for isInline (info) 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 > *:first-child {
  margin-right: 0.25rem;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for isInline (success) 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 > *:first-child {
  margin-right: 0.25rem;
}

.emotion-10 {
  background-color: #e7f0e8;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for isInline (warning) 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 > *:first-child {
  margin-right: 0.25rem;
}

.emotion-10 {
  background-color: #fdf5e8;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for success type 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-10 {
  background-color: #e7f0e8;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for warning type 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-10 {
  background-color: #fdf5e8;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-12 {
  color: #3722ed !important;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-12 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with a close button 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-20 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-19 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-17 {
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #1e67d5;
  border-radius: 4px;
  color: #fff;
  fill: #fff;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-12[disabled],
.emotion-12[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-12:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #1e67d5 0px 0px 0px 1px, #8eb3ea 0px 0px 0px 3px;
}

.emotion-12:hover {
  background-color: #1851a8;
}

.emotion-12:hover:active {
  background-color: #154792;
}

.emotion-12 {
  background-color: unset;
  border: unset;
  color: #1e67d5;
  fill: #1e67d5;
}

.emotion-12:hover {
  background-color: rgba(0,0,0,0.05);
}

.emotion-12:hover:active {
  background-color: rgba(0,0,0,0.1);
}

.emotion-11.emotion-11 {
  min-height: unset;
  padding: 0.5em;
}

.emotion-10 {
  font-size: 1.25em !important;
}

.emotion-8 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  aria-describedby="alertDescription"
  class="emotion-20 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-19 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
    <div
      class="emotion-0 emotion-17 fp-Box"
    >
      <button
        aria-disabled="false"
        class="emotion-11 emotion-12 emotion-0 emotion-1 emotion-15 fp-AlertCloseButton fp-Box fp-Button fp-ButtonClose"
        tabindex="0"
        type="button"
      >
        <svg
          class="emotion-8 emotion-0 emotion-10 fp-Box fp-Icon"
          role="img"
          viewBox="0 0 320 512"
        >
          <path
            d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
        >
          Close
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with a title 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-16 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-15 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-13 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-2 {
  font-weight: 600 !important;
}

abbr.emotion-0 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-0 {
  font-family: monospace;
}

i.emotion-0 {
  font-style: italic;
}

kbd.emotion-0 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-0 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-0 {
  font-weight: bold;
}

sub.emotion-0,
sup.emotion-0 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-0,
u.emotion-0 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-0,
cite.emotion-0,
var.emotion-0,
em.emotion-0 {
  font-style: italic;
}

kbd.emotion-0,
pre.emotion-0,
samp.emotion-0 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

<div
  aria-describedby="alertDescription"
  aria-labelledby="alertTitle"
  class="emotion-16 emotion-1 emotion-4 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-1 emotion-15 fp-Box"
  >
    <div
      class="emotion-1 emotion-13 fp-Box"
    >
      <div
        class="emotion-1 emotion-4 emotion-11 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-1 emotion-4 emotion-5 fp-AlertTitle fp-Box"
        >
          <span
            class="emotion-0 emotion-1 emotion-2 fp-Box fp-Text"
            id="alertTitle"
          >
            This is a title
          </span>
        </div>
        <div
          class="emotion-1 emotion-4 emotion-5 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with custom close button icon props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-20 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-19 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-17 {
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #1e67d5;
  border-radius: 4px;
  color: #fff;
  fill: #fff;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-12[disabled],
.emotion-12[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-12:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #1e67d5 0px 0px 0px 1px, #8eb3ea 0px 0px 0px 3px;
}

.emotion-12:hover {
  background-color: #1851a8;
}

.emotion-12:hover:active {
  background-color: #154792;
}

.emotion-12 {
  background-color: unset;
  border: unset;
  color: #1e67d5;
  fill: #1e67d5;
}

.emotion-12:hover {
  background-color: rgba(0,0,0,0.05);
}

.emotion-12:hover:active {
  background-color: rgba(0,0,0,0.1);
}

.emotion-11.emotion-11 {
  min-height: unset;
  padding: 0.5em;
}

.emotion-8 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-10 {
  font-size: 1.25em !important;
  margin-top: 0.5rem !important;
}

<div
  aria-describedby="alertDescription"
  class="emotion-20 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-19 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
    <div
      class="emotion-0 emotion-17 fp-Box"
    >
      <button
        aria-disabled="false"
        class="emotion-11 emotion-12 emotion-0 emotion-1 emotion-15 fp-AlertCloseButton fp-Box fp-Button fp-ButtonClose"
        tabindex="0"
        type="button"
      >
        <svg
          class="emotion-8 emotion-0 emotion-10 fp-Box fp-Icon"
          role="img"
          viewBox="0 0 320 512"
        >
          <path
            d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
        >
          Close
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with custom close button props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-20 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-19 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-17 {
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-11.emotion-11 {
  min-height: unset;
  padding: 0.5em;
}

.emotion-10 {
  font-size: 1.25em !important;
}

.emotion-8 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #3722ed;
  border-radius: 4px;
  color: #fff;
  fill: #fff;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-12[disabled],
.emotion-12[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-12:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #3722ed 0px 0px 0px 1px, #9b90f6 0px 0px 0px 3px;
}

.emotion-12:hover {
  background-color: #2411cb;
}

.emotion-12:hover:active {
  background-color: #200fb4;
}

.emotion-12 {
  background-color: unset;
  border: unset;
  color: #3722ed;
  fill: #3722ed;
}

.emotion-12:hover {
  background-color: rgba(0,0,0,0.05);
}

.emotion-12:hover:active {
  background-color: rgba(0,0,0,0.1);
}

<div
  aria-describedby="alertDescription"
  class="emotion-20 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-19 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
    <div
      class="emotion-0 emotion-17 fp-Box"
    >
      <button
        aria-disabled="false"
        class="emotion-11 emotion-12 emotion-0 emotion-1 emotion-15 fp-AlertCloseButton fp-Box fp-Button fp-ButtonClose"
        tabindex="0"
        type="button"
      >
        <svg
          class="emotion-8 emotion-0 emotion-10 fp-Box fp-Icon"
          role="img"
          viewBox="0 0 320 512"
        >
          <path
            d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
        >
          Close
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with custom icon props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          Hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`theming Alert.CloseButton.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-20 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-19 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-17 {
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #1e67d5;
  border-radius: 4px;
  color: #fff;
  fill: #fff;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-12[disabled],
.emotion-12[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-12:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #1e67d5 0px 0px 0px 1px, #8eb3ea 0px 0px 0px 3px;
}

.emotion-12:hover {
  background-color: #1851a8;
}

.emotion-12:hover:active {
  background-color: #154792;
}

.emotion-12 {
  background-color: unset;
  border: unset;
  color: #1e67d5;
  fill: #1e67d5;
}

.emotion-12:hover {
  background-color: rgba(0,0,0,0.05);
}

.emotion-12:hover:active {
  background-color: rgba(0,0,0,0.1);
}

.emotion-11.emotion-11 {
  min-height: unset;
  padding: 0.5em;
}

.emotion-10 {
  font-size: 1.25em !important;
}

.emotion-8 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-15 {
  background-color: red;
}

<div
  aria-describedby="alertDescription"
  class="emotion-20 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-19 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          hello world
        </div>
      </div>
    </div>
    <div
      class="emotion-0 emotion-17 fp-Box"
    >
      <button
        aria-disabled="false"
        class="emotion-11 emotion-12 emotion-0 emotion-1 emotion-15 fp-AlertCloseButton fp-Box fp-Button fp-ButtonClose"
        tabindex="0"
        type="button"
      >
        <svg
          class="emotion-8 emotion-0 emotion-10 fp-Box fp-Icon"
          role="img"
          viewBox="0 0 320 512"
        >
          <path
            d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
        >
          Close
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`theming Alert.Content.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-5 {
  background-color: red;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`theming Alert.Description.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-2 {
  background-color: red;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`theming Alert.IconWrapper.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-16 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-15 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-13 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-2 {
  color: #1e67d5 !important;
  font-size: 1.5em !important;
}

.emotion-0 {
  fill: #1e67d5;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-5 {
  line-height: 0.9;
  margin-right: 1rem;
}

.emotion-5 {
  background-color: red;
}

<div
  aria-describedby="alertDescription"
  class="emotion-16 emotion-1 emotion-4 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-1 emotion-15 fp-Box"
  >
    <div
      class="emotion-1 emotion-13 fp-Box"
    >
      <div
        class="emotion-1 emotion-4 emotion-5 fp-AlertIconWrapper fp-Box"
      >
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1 emotion-2 fp-Box fp-Icon"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="emotion-1 emotion-4 emotion-11 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-1 emotion-4 emotion-8 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`theming Alert.Title.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-16 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-15 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-13 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-2 {
  font-weight: 600 !important;
}

abbr.emotion-0 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-0 {
  font-family: monospace;
}

i.emotion-0 {
  font-style: italic;
}

kbd.emotion-0 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-0 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-0 {
  font-weight: bold;
}

sub.emotion-0,
sup.emotion-0 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-0,
u.emotion-0 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-0,
cite.emotion-0,
var.emotion-0,
em.emotion-0 {
  font-style: italic;
}

kbd.emotion-0,
pre.emotion-0,
samp.emotion-0 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-0 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-5 {
  background-color: red;
}

<div
  aria-describedby="alertDescription"
  aria-labelledby="alertTitle"
  class="emotion-16 emotion-1 emotion-4 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-1 emotion-15 fp-Box"
  >
    <div
      class="emotion-1 emotion-13 fp-Box"
    >
      <div
        class="emotion-1 emotion-4 emotion-11 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-1 emotion-4 emotion-5 fp-AlertTitle fp-Box"
        >
          <span
            class="emotion-0 emotion-1 emotion-2 fp-Box fp-Text"
            id="alertTitle"
          >
            This is a title
          </span>
        </div>
        <div
          class="emotion-1 emotion-4 emotion-8 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`theming Alert.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-9 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-box-pack: justify !important;
  -webkit-justify-content: space-between !important;
  -ms-flex-pack: justify !important;
  justify-content: space-between !important;
}

.emotion-7 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
}

.emotion-10 {
  background-color: #e8effa;
  border-radius: 4px;
  padding: 0.5rem 1rem;
  position: relative;
}

.emotion-10 {
  background-color: red;
}

<div
  aria-describedby="alertDescription"
  class="emotion-10 emotion-0 emotion-1 fp-Box fp-Alert"
  role="alert"
>
  <div
    class="emotion-0 emotion-9 fp-Box"
  >
    <div
      class="emotion-0 emotion-7 fp-Box"
    >
      <div
        class="emotion-0 emotion-1 emotion-5 fp-AlertContent fp-Box"
      >
        <div
          class="emotion-0 emotion-1 emotion-2 fp-AlertDescription fp-Box"
          id="alertDescription"
        >
          hello world
        </div>
      </div>
    </div>
  </div>
</div>
`;
